force-app/main/default/objects/Contact/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <label>Customer ID</label>
    <type>Text</type>
    <length>10</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>