force-app/main/default/objects/Contact/fields/Is_Nominee__c.field-meta.xml
<CustomField>
    <fullName>Is_Nominee__c</fullName>
    <label>Is Nominee</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>