force-app/main/default/objects/Contact/fields/Is_Policy_Holder__c.field-meta.xml
<CustomField>
    <fullName>Is_Policy_Holder__c</fullName>
    <label>Is Policy Holder</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>