force-app/main/default/objects/Contact/fields/Life_Stage__c.field-meta.xml
<CustomField>
    <fullName>Life_Stage__c</fullName>
    <label>Life Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Student</fullName><default>false</default><label>Student</label></value>
            <value><fullName>Working</fullName><default>false</default><label>Working</label></value>
            <value><fullName>Married</fullName><default>false</default><label>Married</label></value>
            <value><fullName>Parent</fullName><default>false</default><label>Parent</label></value>
            <value><fullName>Retired</fullName><default>false</default><label>Retired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>