force-app/main/default/objects/Contact/fields/Member_Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Member_Churn_Risk__c</fullName>
    <label>Member Churn Risk</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>