force-app/main/default/objects/Contact/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Salaried - IT</fullName><default>false</default><label>Salaried - IT</label></value>
            <value><fullName>Salaried - Non-IT</fullName><default>false</default><label>Salaried - Non-IT</label></value>
            <value><fullName>Self Employed</fullName><default>false</default><label>Self Employed</label></value>
            <value><fullName>Business Owner</fullName><default>false</default><label>Business Owner</label></value>
            <value><fullName>Retired</fullName><default>false</default><label>Retired</label></value>
            <value><fullName>Student</fullName><default>false</default><label>Student</label></value>
            <value><fullName>Homemaker</fullName><default>false</default><label>Homemaker</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>