force-app/main/default/objects/Contact/fields/Role_in_Family__c.field-meta.xml
<CustomField>
    <fullName>Role_in_Family__c</fullName>
    <label>Role in Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Head</fullName><default>false</default><label>Head</label></value>
            <value><fullName>Spouse</fullName><default>false</default><label>Spouse</label></value>
            <value><fullName>Child</fullName><default>false</default><label>Child</label></value>
            <value><fullName>Parent</fullName><default>false</default><label>Parent</label></value>
            <value><fullName>Dependent</fullName><default>false</default><label>Dependent</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>